# Need-for-Speed

./: README.md
Need-for-Speed/: CMakeLists.txt  CPPLINT.cfg  Makefile  config.yaml  install.sh  install_pre_commit.sh  lobby_client_test  lobby_server_test  output.txt  valgrind_server.txt
Need-for-Speed/Documentacion/: MANUAL_DEL_USUARIO.md  MANUAL_DE_PROYECTO.md
Need-for-Speed/assets/img/map/cities/caminos/liberty-city/ruta-1/: recorrido_final.yaml
Need-for-Speed/assets/img/map/cities/caminos/liberty-city/ruta-2/: recorrido_final.yaml
Need-for-Speed/assets/img/map/cities/caminos/liberty-city/ruta-3/: recorrido_final.yaml
Need-for-Speed/assets/img/map/cities/caminos/san-andreas/ruta-1/: recorrido_final.yaml
Need-for-Speed/assets/img/map/cities/caminos/san-andreas/ruta-2/: recorrido_final.yaml
Need-for-Speed/assets/img/map/cities/caminos/san-andreas/ruta-3/: recorrido_final.yaml
Need-for-Speed/assets/img/map/cities/caminos/vice-city/ruta-1/: recorrido_final.yaml
Need-for-Speed/assets/img/map/cities/caminos/vice-city/ruta-2/: recorrido_final.yaml
Need-for-Speed/assets/img/map/cities/caminos/vice-city/ruta-3/: recorrido_final.yaml
Need-for-Speed/client_src/: CMakeLists.txt  client.cpp  client.h  client_event_handler.cpp  client_event_handler.h  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h  main.cpp
Need-for-Speed/client_src/game/: game_renderer.cpp  game_renderer.h
Need-for-Speed/client_src/lobby/Rankings/: final_ranking.cpp  final_ranking.h
Need-for-Speed/client_src/lobby/controller/: lobby_controller.cpp  lobby_controller.h
Need-for-Speed/client_src/lobby/model/: lobby_client.cpp  lobby_client.h
Need-for-Speed/client_src/lobby/view/: base_lobby.cpp  base_lobby.h  common_types.h  create_match_window.cpp  create_match_window.h  garage_window.cpp  garage_window.h  lobby_window.cpp  lobby_window.h  main.cpp  match_selection_window.cpp  match_selection_window.h  name_input_window.cpp  name_input_window.h  waiting_room_window.cpp  waiting_room_window.h
Need-for-Speed/cmake/: CompilerWarnings.cmake
Need-for-Speed/common_src/: CMakeLists.txt  collision_manager.cpp  collision_manager.h  config.cpp  config.h  dtos.h  game_protocol.cpp  game_protocol.h  game_state.cpp  game_state.h  general_paths.h  liberror.cpp  liberror.h  lobby_protocol.cpp  lobby_protocol.h  queue.h  resolver.cpp  resolvererror.cpp  resolvererror.h  socket.cpp  thread.h
Need-for-Speed/editor/: CMakeLists.txt  main.cpp
Need-for-Speed/server_src/: CMakeLists.txt  acceptor.cpp  acceptor.h  main.cpp  server.cpp  server.h  server_protocol.cpp  server_protocol.h
Need-for-Speed/server_src/city_maps/: EJEMPLO_Playa.yaml
Need-for-Speed/server_src/city_maps/Liberty City/: liberty-city.yaml  ruta-1.yaml  ruta-2.yaml  ruta-3.yaml
Need-for-Speed/server_src/city_maps/San Andreas/: ruta-1.yaml  ruta-2.yaml  ruta-3.yaml  san-andreas.yaml
Need-for-Speed/server_src/city_maps/Vice City/: ruta-1.yaml  ruta-2.yaml  ruta-3.yaml  vice-city.yaml
Need-for-Speed/server_src/game/: car.cpp  car.h  checkpoints.h  collision_handler.cpp  collision_handler.h  game_loop.cpp  game_loop.h  map_loader.cpp  map_loader.h  match.cpp  match.h  obstacle_manager.h  physics_constants.h  player.h  race.h
Need-for-Speed/server_src/network/: client_handler.cpp  client_handler.h  client_monitor.cpp  client_monitor.h  matches_monitor.cpp  matches_monitor.h  receiver.cpp  receiver.h  sender.cpp  sender.h
Need-for-Speed/tests/: CMakeLists.txt  lobby_integration_test.cpp  lobby_tests.cpp  protocol_tests.cpp  test_collision_movimiento.cpp
